# nb2prod-api-service

./: .env.example  .gitignore  Dockerfile  README.md  install_with_gemfury.sh  pyproject.toml  requirements.txt  run_tests_with_env.sh  tox.ini
.circleci/: config.yml
nb2prod_api_service/: main.py
requirements/: test_requirements.txt
tests/: test_main.py
