[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb2prod-api-service"
version = "0.1.0"
description = "FastAPI REST API for nb2prod ML model"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "fastapi", "uvicorn"
]

[project.urls]
"Source" = "https://github.com/yourname/nb2prod-api-service"
